--- a/tvm-styles.css
+++ b/tvm-styles.css
@@ -18,7 +18,6 @@ nav {
     padding: 10px 0;
     background-color: #cfcece;
 }
-
 nav div a,  nav div a:visited {
     color: #ffffff;
     color: var(--main-text-color);
@@ -97,7 +96,7 @@ nav div a:hover, nav div a:active {
 } */
 
     /* button styles **************************/
-    button {
+    /* button {
         text-decoration: none;
         cursor: pointer;
         font-size: 16px;
@@ -131,12 +130,50 @@ nav div a:hover, nav div a:active {
     }
     .calculate-btn:active, .calculate-btn:focus {
         color: white;
-    }  
+    } */  
     .help {
         /* change help button color */
         background-color: #CC444B;
-    } 
+    }  
     /* end button styles **************************/
+    /* TESTING TURN LINK INTO BUTTON STYLES */
+    a.btn, button.btn {
+        text-decoration: none;
+        cursor: pointer;
+        font-size: 16px;
+        width: 125px;
+        border-radius: 8px;
+        box-shadow: 5px 10px 18px #b1b1b1;
+        border-radius: .25rem;
+    }
+    button:active, button:focus, .btn:active, .btn:focus button:hover, .btn:hover {
+        color: #fff;
+    }
+    button a:active, button a:link, button a:hover, button a:visited {
+        color: #fff;
+        text-decoration: none;
+    }
+    a.start {
+        box-shadow: 5px 10px 18px #242424;
+        margin-top: 450px;
+        margin-bottom: 25px;
+    }
+    .btn {
+        background-color: var(--header-color);
+        color: #fff;
+        margin: 5px;
+    }
+    .calculate-btn {
+        background-color:  #89002d;
+        width: 50%;
+        color: white;
+        font-size: 14px;
+        margin: 10px 0 10px 25%;
+    }
+    .calculate-btn:active, .calculate-btn:focus {
+        color: white;
+    }
+    /* END ********TESTING TURN LINK INTO BUTTON STYLES */
 
     /* image styles **************************/
     .img-fluid {
