--- a/tvm-styles.css
+++ b/tvm-styles.css
@@ -113,15 +113,14 @@ nav div a:hover, nav div a:active {
     }
     .calculate-btn {
         background-color:  #89002d;
-        width: 30% !important;
+        width: 200px !important;
         color: white;
         font-size: 14px;
-        margin: 10px 0 10px 25%;
+        margin-left: 175px !important;
     }
     .calculate-btn:active, .calculate-btn:focus {
         color: white;
     }
-    /* END ********TESTING TURN LINK INTO BUTTON STYLES */
 
     /* image styles **************************/
     .img-fluid {
@@ -247,7 +246,7 @@ nav div a:hover, nav div a:active {
         margin: 15px 10px;
     }
     .calculate-btn {
-        width: 30%;
+        width: 200px;
         /* margin-left: 15%; */
     }
     input[type=text], input[type=password], input[type=email], input[type=number], textarea, select {
